# instasnoop

./: .gitignore  README.md  pyproject.toml
instasnoop/: cli.py  crossplatform.py  dorker.py  instagram.py  parser.py  reporter.py  scanner.py
tests/: test_all_scenarios.py  test_scanner.py
